# blogify

./: Cargo.toml  README.md  WELL.post
demo/: WHAT.post  another.post  gogogo.post  good_this_time.post  hash.post  hash2.post  inside_dmeo.post  nice_post.post  no way.post  stillhashin.post
demo/good_this_time/: meta.toml  test.html
demo/hash/: input.txt  meta.toml
demo/inside_dmeo/: meta.toml
demo/nice_post/: meta.toml
src/: main.rs
