[package]
name = "blogify"
version = "0.1.0"
authors = ["Paul Miller <paul@pauljmiller.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.2"
promptly = "0.1.5"
zip = "0.5.3"
toml = "0.5.3"
serde = { version = "1.0.101", features = ["derive"] }
chrono = { version = "0.4.9", features = ["serde"] }
sha2 = "0.8.0"
data-encoding = "2.1.2"